--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+.game {
+    display: flex;
+}
+
 #background {
     width: 550px;
     height: 575px;
@@ -19,6 +23,30 @@
 .pumpkin {
     width: 2rem;
     position: fixed;
+}
+
+.score,
+.lives {
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.score h1,
+.lives h1 {
+    margin-top: .5rem;
+}
+
+.number,
+.icons {
+    margin: .25rem 1rem;
+    border: 1px solid red;
+    width: 3rem;
+    height: 3rem;
+}
+
+.icons {
+    border: none
 }
 
 .show {
