--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -5,18 +5,17 @@
 #background {
     width: 550px;
     height: 575px;
-    background-image: url(./img/white_bg.jpg);
+    background-image: url("../../img/white_bg.jpg");
     border: 1px solid grey;
     padding: 1rem;
-}
-
-#character {
-    position: absolute;
-    top: 100px;
-    left: 450px;
-    background-image: url("img/down1.png");
-    width: 59px;
-    height: 86px;
+    #character {
+        position: absolute;
+        top: 100px;
+        left: 450px;
+        background-image: url("../../img/down1.png");
+        width: 59px;
+        height: 86px;
+    }
 }
 
 .sushi,
@@ -30,28 +29,30 @@
     margin: 1rem;
     display: flex;
     flex-direction: row;
+
+    h1 {
+        margin-top: .5rem;
+
+    }
 }
 
-.score h1,
-.lives h1 {
-    margin-top: .5rem;
-}
-
-.number{
+.number {
     margin: .25rem 1rem;
     border: 1px solid red;
     width: 3rem;
     height: 3rem;
+    font-size: 2rem;
+    padding-left: 0.75rem;
 }
 
 .icons {
     margin: .5rem 1rem;
-}
 
-.life {
-    border: none;
-    width: 3rem;
-    height: 3rem;
+    .life {
+        border: none;
+        width: 3rem;
+        height: 3rem;
+    }
 }
 
 .show {
