--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,8 @@
   .lives h1 {
     margin-top: .5rem; }
 
-.number {
+.number,
+.life {
   margin: .25rem 1rem;
   border: 1px solid red;
   width: 3rem;
@@ -37,15 +38,13 @@
   font-size: 2rem;
   padding-left: 0.75rem; }
 
-.icons {
-  margin: .5rem 1rem; }
-  .icons .life {
-    border: none;
-    width: 3rem;
-    height: 3rem; }
-
-.show {
-  visibility: visible; }
+.game_over {
+  width: 550px;
+  height: 575px;
+  background-color: red; }
+  .game_over h1 {
+    text-align: center;
+    margin-top: 15rem; }
 
 .hide {
-  visibility: hidden; }
+  display: none; }
