--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -8,6 +8,7 @@
     background-image: url("../../img/white_bg.jpg");
     border: 1px solid grey;
     padding: 1rem;
+
     #character {
         position: absolute;
         top: 100px;
@@ -36,7 +37,8 @@
     }
 }
 
-.number {
+.number,
+.life {
     margin: .25rem 1rem;
     border: 1px solid red;
     width: 3rem;
@@ -45,20 +47,17 @@
     padding-left: 0.75rem;
 }
 
-.icons {
-    margin: .5rem 1rem;
+.game_over {
+    width: 550px;
+    height: 575px;
+    background-color: red;
 
-    .life {
-        border: none;
-        width: 3rem;
-        height: 3rem;
+    h1 {
+        text-align: center;
+        margin-top: 15rem;
     }
 }
 
-.show {
-    visibility: visible;
-}
-
 .hide {
-    visibility: hidden;
+    display: none;
 }
