--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,10 +41,17 @@
 .game_over {
   width: 550px;
   height: 575px;
-  background-color: red; }
+  background-color: red;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
   .game_over h1 {
     text-align: center;
     margin-top: 15rem; }
+  .game_over .reset {
+    border-radius: 25px;
+    height: 2.5rem;
+    width: 8rem; }
 
 .hide {
   display: none; }
