edit number colors

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,7 @@
 .life {
   margin: .5rem 1rem;
   width: 3rem;
+  color: #ff0000;
   height: 3rem;
   font-size: 2rem;
   padding-left: 0.75rem; }
